--- a/contributors/templates/contributors/base.html
+++ b/contributors/templates/contributors/base.html
@@ -12,16 +12,19 @@
 </head>
 <body>
 
-<p>Hello
+
     {% if user.is_authenticated %}
         Hello, {{ user.username }}
-        <a href="{% url 'users:logout' %}">log out</a>
+        <a href="{% url 'users:logout' %}">log out</a> -
+        <a href="{% url 'contributors:get_data' %}">Fill form</a>
     {% else %}
         <a href="{% url 'users:register' %}">register</a>
         <a href="{% url 'users:login' %}">log in</a>
     {% endif %}
 
+{% block header %}
 
+{% endblock header %}
 {% block content %}
 
 
