--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends 'contributors/base.html' %}
 {% load bootstrap3 %}
-{% load crispy_forms_tags %}
+
 
 
 
@@ -8,7 +8,7 @@
 
     <form method="post" action="{% url 'users:register' %}" class="form">
         {% csrf_token %}
-        {% crispy form %}
+        {% bootstrap_form form %}
         {% buttons %}
             <button name="submit" class="btn btn-primary">register</button>
         {% endbuttons %}
